--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,15 +11,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MY TODO"
+        android:textSize="25sp"
+        style="@style/textColor"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
+        android:visibility="gone"
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="login"
+        android:elevation="20dp"
+        style="@style/buttons"
         app:layout_constraintTop_toBottomOf="@id/text_start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
