--- a/app/src/main/res/layout/event.xml
+++ b/app/src/main/res/layout/event.xml
@@ -8,6 +8,7 @@
         android:text="text"
         android:textSize="20dp"
         android:layout_marginStart="10dp"
+        style="@style/textColor"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/checkbox"
         app:layout_constraintStart_toStartOf="parent"
