--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.ToDo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/default_gray</item>
+        <item name="colorPrimaryVariant">@color/default_gray</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/default_gray</item>
+        <item name="colorSecondaryVariant">@color/default_gray</item>
+        <item name="colorOnSecondary">@color/default_gray</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -20,6 +20,13 @@
     </style>
 
     <style name="Theme.ToDo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="Theme.ToDo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="textColor">
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="buttons">
+        <item name="backgroundTint">@color/default_gray</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
