--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -8,18 +8,28 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/sad_face"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="@id/no_events"
+            app:layout_constraintBottom_toBottomOf="@id/no_events"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="25dp"
+            app:layout_constraintEnd_toEndOf="parent" />
         <TextView
             android:id="@+id/no_events"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="no events"
+            android:text=""
             style="@style/textColor"
-            android:textSize="20dp"
+            android:textSize="25dp"
             android:elevation="6dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_events"
             android:layout_width="0dp"
