--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:text=""
             style="@style/textColor"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:elevation="6dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
