--- a/app/src/main/res/layout/event.xml
+++ b/app/src/main/res/layout/event.xml
@@ -1,26 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+style="@style/card"
+app:strokeWidth="0dp"
+app:layout_optimizationLevel="standard|dimensions|ratio"
+app:cardCornerRadius="26dp"
+app:cardElevation="2dp"
+android:layout_marginHorizontal="7dp"
+android:layout_marginVertical="8dp">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/card"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView
-        android:id="@+id/text_field"
-        android:text="text"
-        android:textSize="20dp"
-        android:layout_marginStart="10dp"
-        style="@style/textColor"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/checkbox"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+    android:layout_height="match_parent"
+    android:paddingHorizontal="15dp">
+
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/checkbox"
-        app:layout_constraintStart_toEndOf="@id/text_field"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/text_field"
-        app:layout_constraintBottom_toBottomOf="@id/text_field"
+        app:layout_constraintStart_toStartOf="@id/card"
+        app:layout_constraintTop_toTopOf="@id/card"
+        app:layout_constraintBottom_toBottomOf="@id/card"
+        app:layout_constraintEnd_toStartOf="@id/text_field"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"/>
+    <TextView
+        android:id="@+id/text_field"
+        android:text="@string/app_name"
+        android:textSize="20sp"
+
+        android:ellipsize="end"
+        android:maxLines="1"
+
+        style="@style/textColor"
+        app:layout_constraintTop_toTopOf="@id/checkbox"
+        app:layout_constraintStart_toEndOf="@id/checkbox"
+        app:layout_constraintBottom_toBottomOf="@id/checkbox"
+        app:layout_constraintEnd_toStartOf="@id/button_expand_note"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"/>
+
+    <androidx.constraintlayout.utils.widget.ImageFilterButton
+        android:id="@+id/button_expand_note"
+        style="@style/Widget.Material3.Button.TextButton.Dialog.Icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rotationX="180"
+        android:src="@drawable/arrow_up"
+        app:layout_constraintBottom_toBottomOf="@id/checkbox"
+        app:layout_constraintEnd_toEndOf="@id/card"
+        app:layout_constraintTop_toTopOf="@id/checkbox"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
