--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -8,27 +8,36 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_margin="15dp"
+            android:padding="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/recycler_events"/>
         <ImageView
             android:id="@+id/sad_face"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="@id/no_events"
-            app:layout_constraintBottom_toBottomOf="@id/no_events"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="25dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
         <TextView
             android:id="@+id/no_events"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="@string/title_empty_notes"
             style="@style/textColor"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:elevation="6dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/sad_face"
+            app:layout_constraintStart_toStartOf="@id/sad_face"
+            app:layout_constraintEnd_toEndOf="@id/sad_face" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_events"
@@ -37,7 +46,7 @@
             android:orientation="vertical"
             android:elevation="5dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:itemCount="9"
@@ -46,13 +55,15 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:id="@+id/fab"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom|end"
-    app:elevation="20dp"
-    android:layout_marginEnd="@dimen/fab_margin"
-    android:layout_marginBottom="16dp"
-    app:backgroundTint="#FFFFFF"
-    app:srcCompat="@drawable/ic_baseline_add_24" />
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        app:elevation="20dp"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="@string/app_name"
+        app:backgroundTint="#FFFFFF"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        app:borderWidth="0dp" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
