--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,12 +21,20 @@
 
     <style name="Theme.ToDo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.ToDo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="textColor">
         <item name="android:textColor">@color/black</item>
     </style>
+    <style name="card">
+        <item name="cardBackgroundColor">@color/white</item>
+    </style>
+
     <style name="buttons">
         <item name="backgroundTint">@color/default_gray</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="arrow">
+        <item name="backgroundTint">@color/black</item>
     </style>
 
 </resources>
